--- a/web/app/templates/account/verification_sent.html
+++ b/web/app/templates/account/verification_sent.html
@@ -1,12 +1,17 @@
-{% extends "account/base.html" %}
+{% extends "../layout.html" %}
 
 {% load i18n %}
+{% load widget_tweaks %}
 
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Verify Your E-mail Address" %}</h1>
-
-    <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
-
+<div class="row justify-content-center logreg my-4">
+    <div class="col-sm-11 col-md-8 col-lg-6">
+        <h1>{% trans "Verify Your E-mail Address" %}</h1>
+        <p>We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process.</p>
+        <p>Please contact us if you do not receive it within a few minutes.</p>
+    </div>
+</div>
 {% endblock %}
+
