--- a/web/app/templates/account/email_confirm.html
+++ b/web/app/templates/account/email_confirm.html
@@ -9,17 +9,15 @@
 
 {% block content %}
 <div class="row justify-content-center">
-  <div class="col-sm-12 col-md-10 col-lg-8 col-xl-6" id="emailconfirm-form">
-
+  <div class="col-sm-12 col-md-10 col-lg-8 col-xl-6">
+    <div  id="emailconfirm-form">
     <h1 class="text-center">{% trans "Confirm E-mail Address" %}</h1>
     <div style="width: 100%; height: 20px; border-bottom: 1px solid white; margin-bottom: 16px;"></div>
-    <div>
-      <p>{% blocktrans with confirmation.email_address.email as email %}Please confirm you own <a href="mailto:{{ email }}">{{ email }}</a>.{% endblocktrans %}</p>
       <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
+        <p>{% blocktrans with confirmation.email_address.email as email %}Please confirm you own <a href="mailto:{{ email }}">{{ email }}</a>.{% endblocktrans %}</p>
         {% csrf_token %}
         <button class="btn btn-primary btn-block" type="submit">{% trans 'Confirm' %}</button>
       </form>
-    </div>
 
   {% if confirmation %}
     {% user_display confirmation.email_address.user as user_display %}
@@ -29,7 +27,8 @@
   {% url 'account_email' as email_url %}
 
   <p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
+  {% endif %}
     </div>
   </div>
-  {% endif %}
+</div>
 {% endblock %}
